# tket

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .typos.toml  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  build-without-conan.md  do-clang-format  flake.nix  kyriakos.py  kyriakos.sh  libver  pyproject.toml  rootpath  test.py
bubble/coverage/: CMakeLists.txt  CodeCoverage.cmake
bubble/src/: CMakeLists.txt  tketCMake.cmake  tketsrcfiles.cmake
bubble/src/ArchAwareSynth/: Path.hpp  SteinerForest.cpp  SteinerForest.hpp  SteinerTree.hpp
bubble/src/Architecture/: Architectures.hpp
bubble/src/Characterisation/: Cycles.cpp  Cycles.hpp  DeviceCharacterisation.hpp  FrameRandomisation.hpp
bubble/src/Circuit/: AssertionSynthesis.cpp  AssertionSynthesis.hpp  Boxes.cpp  Boxes.hpp  CircPool.hpp  Circuit.cpp  Circuit.hpp  CircuitJson.cpp  ClassicalExpBox.hpp  Command.hpp  CommandJson.cpp  DAGDefs.hpp  DAGProperties.hpp  OpJson.cpp  ThreeQubitConversion.cpp  ThreeQubitConversion.hpp  basic_circ_manip.cpp  macro_circ_info.cpp  macro_manipulation.cpp  setters_and_getters.cpp
bubble/src/Clifford/: CliffTableau.hpp
bubble/src/Converters/: Converters.hpp  PauliGadget.cpp  PauliGraphConverters.cpp  PhasePoly.cpp  PhasePoly.hpp
bubble/src/Diagonalisation/: Diagonalisation.cpp  PauliPartition.cpp
bubble/src/Gate/: GatePtr.hpp  GateUnitaryMatrix.cpp  (+12 more)
bubble/tests/: CMakeLists.txt  test_Architectures.cpp  test_Assertion.cpp  test_Clifford.cpp  test_Combinators.cpp  test_CompilerPass.cpp  test_ContextOpt.cpp  test_ControlDecomp.cpp  test_DeviceCharacterisation.cpp  test_FrameRandomisation.cpp  test_MeasurementSetup.cpp  test_Partition.cpp  test_Path.cpp  test_PauliGraph.cpp  test_PauliString.cpp  test_PhaseGadget.cpp  test_Predicates.cpp  test_Rebase.cpp  test_Routing.cpp  test_SteinerForest.cpp  test_Synthesis.cpp  test_TwoQubitCanonical.cpp  test_Utils.cpp  test_json.cpp  tests_main.cpp  tkettestseq.cpp  tkettestsfiles.cmake
libs/tkassert/: CMakeLists.txt  conanfile.py  default.nix
libs/tklog/: CMakeLists.txt  conanfile.py  default.nix
libs/tkrng/: CMakeLists.txt  conanfile.py  default.nix
libs/tktokenswap/: CMakeLists.txt  conanfile.py  default.nix
libs/tkwsm/: CMakeLists.txt  conanfile.py  default.nix
pytket/: .pylintrc  CMakeLists.txt  MANIFEST.in  README.md  cleanup_stubs.sh  conanfile.py  conanfile.txt  default.nix  generate_stubs  mypy.ini  package.md  pyproject.toml  regenerate_stubs  ruff.toml  setup.cfg  setup.py  stub_blacklist.txt  testnotebook.ipynb  third-party.nix  tket
pytket/binders/: architecture.cpp  circuit_library.cpp  extras.cpp  logging.cpp  mapping.cpp  partition.cpp  passes.cpp  pauli.cpp  placement.cpp  predicates.cpp  program.cpp  routing.cpp  tableau.cpp  tailoring.cpp  transform.cpp  type_aliases.py  unitid.cpp  utils_serialization.cpp
pytket/docs/: .gitignore  Makefile  README.md  architecture.md  architecture.rst  backends.md  backends.rst  build-docs.sh  changelog.md  changelog.rst  check_circuit_class_docs.py  circuit.md  circuit.rst  circuit_class.md  circuit_class.rst  circuit_library.md  circuit_library.rst  classical.md  classical.rst  conf.py  config.md  config.rst  display.md  display.rst  err.txt  examples.rst  extensions.md  extensions.rst  extensions_index.rst  faqs.md  faqs.rst  getting_started.md  getting_started.rst  index.md  index.rst  install.md  install.rst  justfile  logging.md  logging.rst  (+36 more)
pytket/pytket/: __init__.py
pytket/stub_generation/: README.md  gen-stubs  regenerate_stubs  stubgen.py
pytket/tests/: .gitignore  Untitled.ipynb  add_circuit_test.py  ansatz_sequence_test.py  architecture_aware_synthesis_test.py  architecture_test.py  assertion_test.py  backend_test.py  backendinfo_test.py  characterisation_test.py  circuit_test.py  classical_test.py  clexpr_test.py  cli-test  compilation_test.py  conftest.py  distribution_test.py  lightsabre_test.py  logic_exp_test.py  mapping_test.py  measurement_setup_test.py  mitigation_test.py  passes_script_test.py  passes_serialisation_test.py  placement_test.py  predicates_test.py  program_test.py  pytket_config_test.py  qasm_test.py  qir_test.py  qubitpaulioperator_test.py  quipper_simulate  quipper_test.py  requirements-openfermion.txt  requirements.txt  rmbqc_test.py  rng_test.py  routing_test.py  seed_issue.py  strategies.py  (+9 more)
tket/: CMakeLists.txt  Doxyfile  README.md  conanfile.py  default.nix  tket_deps
tket-c-api/: .gitignore  CMakeLists.txt  conanfile.py
tket-c-api/include/: tket-c-api.h
tket-c-api/src/: tket-c-api.cpp
tket-c-api/test_package/: CMakeLists.txt  conanfile.py
tket/benchmarks/: CMakeLists.txt  circuit.cpp  circuit_random.cpp
tket/cmake/: tketConfig.cmake.in
tket/proptest/: CMakeLists.txt  conanfile.py
tket/proptests/: CMakeLists.txt  ComparisonFunctions.cpp  ComparisonFunctions.hpp  proptest.cpp
tket/src/: CMakeLists.txt
tket/test/: CMakeLists.txt  conanfile.py  tkettestsfiles.cmake  tkettestutilsfiles.cmake
tket/test_package/: CMakeLists.txt  conanfile.py
tket/tests/: CMakeLists.txt  CircuitsForTesting.cpp  CircuitsForTesting.hpp  random_angles.txt  test_AASRoute.cpp  test_ArchitectureAwareSynthesis.cpp  test_Architectures.cpp  test_Assertion.cpp  test_BoxDecompRoutingMethod.cpp  test_ChoiMixTableau.cpp  test_CliffTableau.cpp  test_Clifford.cpp  test_CoherentTableau.cpp  test_Combinators.cpp  test_CompilerPass.cpp  test_ContextOpt.cpp  test_ControlDecomp.cpp  test_DeviceCharacterisation.cpp  test_FrameRandomisation.cpp  test_GlobalisePhasedX.cpp  test_LexiRoute.cpp  test_LexicographicalComparison.cpp  test_MappingFrontier.cpp  test_MappingManager.cpp  test_MappingVerification.cpp  test_MeasurementReduction.cpp  test_MeasurementSetup.cpp  test_MultiGateReorder.cpp  test_Partition.cpp  test_Path.cpp  test_PauliGraph.cpp  test_PauliGraph2.cpp  test_PauliGraph3.cpp  test_PauliString.cpp  test_PhaseGadget.cpp  test_PhasePolynomials.cpp  test_PhasedXFrontier.cpp  test_Placement.cpp  test_PostRoutingOptimisation.cpp  test_Predicates.cpp  (+22 more)
tket/tket_c/: CMakeLists.txt
(+8663 files in other folders)
